2006-10-31  Naba Kumar  <naba@gnome.org>

	* plugins/symbol-browser: Fixed action path (double
	click on sysmbols was not working).

	* libanjuta/anjuta-session.[ch], libanjuta/anjuta-serializer.c:
	Fixed typedef and removed dead code.

	* tagmanager/c.c: Took the latest version from ctags source
	repository, because the one we had (from ctags 5.6) was broken.
	
	* global_tags/create_global_tags.sh.in: Reverted the patch from
	Sylvain because it was not right fix (and added a helpful comment).
	Used /bin/bash to fix the bashism and generated separate log files
	for each tag files in the same directory.
	
2006-10-29  Naba Kumar  <naba@gnome.org>

	* plugins/editor/text_editor.c: Use a temporary file
	to save the editor and move it at the end to original
	file. This will prevent data corruption if file save
	failed for any reason. Also report proper errors when
	file save fails. Fixes bug #346575.
	
2006-10-26  Naba Kumar  <naba@gnome.org>

	* plugins/document-manager/anjuta-docman.c: Do not load
	the same files with different path more than once (happens
	with symlinked files). Fixes Bug #323591.

2006-10-25  Naba Kumar  <naba@gnome.org>

	* plugins/valgrind/vgactions.c: Fixed a warning.

2006-10-25  Sylvain Defresne  <sdefresne@gmail.com>

	Reviewed by Naba Kumar  <naba@gnome.org>:

	* plugins/valgrind/vgtoolview.c:
	Correct memory leaks in vg_tool_view_set_{argv,srcdir}.

	* plugins/valgrind/bugged-prg-test.c:
	No more warning during compilation with GCC 4.1.
	Program is still buggy in order to be used as a test of the
	plugin.

	* plugins/valgrind/ldd.c plugins/valgrind/parser.c
	plugins/valgrind/preferences.c plugins/valgrind/symtab.c
	plugins/valgrind/vgdefaultview.c plugins/valgrind/vgerror.c
	plugins/valgrind/vgrule.c:
	No more warning during compilation with GCC 4.1.

	* plugins/valgrind/plugin.c:
	Correct call to vg_tool_view_set_{argv,srcdir} to conform to
	prototype (was missing from previous patch).

2006-10-24  Naba Kumar  <naba@gnome.org>
