@@ -88,5 +88,6 @@ if ( [ ! -z $PKG_CONFIG ] && [ -x $PKG_CONFIG ] ) ; then
 	    # fi
 	done
     done
+	echo "Done"
     echo "This is just a timestamp" > $HOME/.anjuta/system-tags.cache
 fi
